.kubernetes/generated/client/3.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "master"
  name: master-client
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: master-client-container
  template:
    metadata:
      namespace: "master"
      labels:
        app: master-client
        pod: master-client-container
    spec:
      containers:
        - name: master-client
          image: ghcr.io/nestjs-mod/nestjs-mod-fullstack-nginx:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8181
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 300m
      imagePullSecrets:
        - name: docker-regcred
