.kubernetes/generated/client/4.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "master"
  name: master-client
  labels:
    app: master-client
spec:
  selector:
    app: master-client
  ports:
    - name: '8181'
      protocol: TCP
      port: 8181
      targetPort: 8181
  type: ClusterIP
