.kubernetes/generated/client/5.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "master"
  name: master-client-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: master-client
                port:
                  number: 8181
  tls:
    - hosts:
        - example.com
      secretName: master-client-tls
